--- a/.gitignore
+++ b/.gitignore
@@ -98,6 +98,5 @@ ENV/
 # PyCharm
 .idea/
 
-models/*
-models/rec_20250704_173434_sliced.fml
-!models/test_model.pt
+flowcean_ros/models/*
+!flowcean_ros/models/test_model.pt
